--- a/SCSS/AbautUs.scss
+++ b/SCSS/AbautUs.scss
@@ -14,3 +14,16 @@
   padding: 1rem 0% 2rem 0%;
   text-align: center;
 }
+.text-h4_style{
+  text-decoration: double;
+  text-align: center;
+  color: #ffffff;
+}
+.banner-p_style-size{
+  font-size: 1rem;
+  color: #ffffff;
+}
+.text-abautUs_margin{
+  width: 92%;
+  margin: 1.5rem 4% 1rem 4%;
+}
